# layer-time-geometry

./: .gitignore  LICENSE  README.md  layer_time_geometry.py  lecture_slides.tex  ltg.py  ltg_ga.py  monograph_ga_learning.tex  monograph_undergrad.tex  pyproject.toml  requirements.txt  run_3prompt_figures.py  run_book_figures.py  run_sec16_1_figures.py
layer_time/: __init__.py  _compat.py  analyzer.py  plotting.py  results.py
layer_time_ga/: __init__.py  algebra.py  bca.py  capacity.py  curvature.py  decomposition.py  plotting.py
tests/: test_backend.py  test_ga_algebra.py  test_ga_decomposition.py  test_gpu.py  test_package.py
tutorials/: ch1_opening_the_black_box.ipynb  ch2_whitening.ipynb  ch3_kernels.ipynb  ch4_polar_decomposition.ipynb  ch5_curvature.ipynb  ch6_experiments.ipynb  ch7_dependency.ipynb  ch8_reasoning_memory_control.ipynb  ch9_diagnosing_failures.ipynb
tutorials_ga_learning/: ch01_vectors_live_somewhere.ipynb  ch02_product_that_does_everything.ipynb  ch03_planes_not_axes.ipynb  ch04_when_coordinates_lie.ipynb  ch05_rotations_without_matrices.ipynb  ch06_what_a_layer_does.ipynb  ch07_reading_the_planes.ipynb  ch08_eigenvalue_story.ipynb  ch09_when_order_matters.ipynb  ch10_walking_in_circles.ipynb  ch11_how_much_computation.ipynb  ch12_which_planes_matter.ipynb  ch13_diagnosing_and_steering.ipynb  ch14_what_ga_gave_us.ipynb
