[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layer-time"
version = "0.2.0"
description = "Geometric interpretability for transformer language models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Agus Sudjianto"},
    {name = "Aijun Zhang"},
]
keywords = [
    "transformers", "interpretability", "geometry", "curvature",
    "language-models", "mechanistic-interpretability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
tutorials = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/agus-sudjianto/layer-time"
Documentation = "https://github.com/agus-sudjianto/layer-time#readme"

[tool.setuptools]
packages = ["layer_time"]
py-modules = ["layer_time_geometry", "ltg"]

[tool.setuptools.package-data]
layer_time = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
